# PYTHON_PROJECTS

./: .gitignore
01_unit-converter/: main.py  requirement.txt
02-passowrd-strength-meter/: main.py  pyproject.toml
03-library-manager/: README.md  library.json  library_manager.py  pyproject.toml
05-secure-data-encryption/: .gitignore  README.md  pyproject.toml  requirements.txt
05_secure_data_encryption/: README.md  main.py  pyproject.toml  users.json
06_Build_Compose_and_Decorate_A_Complete_Traditional_OOP_Practice_Series/: OOPs.py
Assgnment04/Assignments-00-05/: 03_fahrenheit_to_celsius.py  05_parameter_of_triangle.py
Assgnment04/Assignments-00-05/00_intro_python/: 01_addition.py  02_agreement_bot.py  04_age_riddle.py  06_square_number.py
Assgnment04/Assignments-00-05/01_expressions/: 02_e=mc2.py  03_feet_to_inches.py  04_pythagorean_theorem.py  05_remainder_division.py  06_rolldice.py  06_seconds_in_year.py  07_tiny_mad_lib..py
Assgnment04/Assignments-00-05/03_List/: double_numbers.py  first_element.py  list_builder.py  list_shortener.py  sum_numbers.py
