[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "secure-data-encryption"
version = "0.1.0"
authors = [
    { name = "Your Name" },
]
description = "A secure data encryption application"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "streamlit>=1.45.1",
    "cryptography",
    "python-dotenv",
]

[project.urls]
Homepage = "https://github.com/yourusername/secure-data-encryption"
Documentation = "https://github.com/yourusername/secure-data-encryption#readme"

[tool.streamlit]
# Streamlit-specific configurations
page_title = "Secure Data Encryption"
layout = "wide"

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.metadata]
allow-direct-references = true
